--- a/Woodland/src/index.css
+++ b/Woodland/src/index.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, #root {
+html, body {
   width: 100%;
   height: 100%;
   margin: 0;
-  touch-action: none;
+  overflow-x: hidden;
 }
+
 
 @layer utilities {
   .glitch {
